
2013-08-23:
- Fixing an issue in the Hessian computation for boundary fits with
  useMatrix=FALSE and a single scalar random-effects term.
- Allowing control parameters to be passed on to nlminb (when it is
  used). A bug was fixed in getCtrlArgs and clmm.control now includes
  method="nlminb".
- Adding test for no. random effects >= no. observations for each
  r.e. term.

2013-08-25
- changing default optimizer from ucminf to nlminb
- adding grad.ctr4 to the list of gradient functions
- explicitly computing the number of objective function evaluations
  rather than relying on the optimizer's count.
- wrapping calls to optimizers in try() to catch errors that occur
  here
- adding test for non-finite parameter values in *.ssr objective
  functions.
- adding list of control parameters to list of clmm output.
- refining test of no. random effects > no. observations.
- removing ucminf control settings from clmm.control when fitting with
  nlminb.
- fixing bug with C version of NRalgv3 (conditional mode update):
  Hessian (D) values are now initialized to 1 rather than 0.

2013-08-26:
- registrering global variables.
- removing use of ':::'.

2013-08-27:
- documenting list of control parameters in clmm objects.

2013-09-27:
- no longer importing numDeriv as we now use our own gradient and
  hessian functions
- moving Matrix package from Depends to Imports

2013-10-01:
- Updating convergence checking in clm.fit and simple_clm to the clm
  standard
- Removing distinction between (non-S3/4) sclm, eclm and clm model
  classes

2013-10-31:
- Now having 'methods' in depends since this is needed to run
  clmm. This was most likely only a problem when using Rscript where
  the methods package is not loaded by default.

2014-11-12:
- Reimplementation of formula, model.frame and design matrix
  processing motivated by a bug in model.matrix.clm and predict.clm
  reported by Russell Lenth 2014-11-07 when implementing lsmeans support
  for clm::ordinal.